Add Baird Overview doc.

--- a/specs/Makefile
+++ b/specs/Makefile
@@ -8,7 +8,9 @@ TCLSH ?= tclsh
 
 OUT = \
 	draft-mcroberts-uri-dvb.txt draft-mcroberts-uri-dvb.html \
-	draft-mcroberts-uri-resolver.txt draft-mcroberts-uri-resolver.html
+	draft-mcroberts-uri-resolver.txt draft-mcroberts-uri-resolver.html \
+	draft-mcroberts-baird-overview.txt draft-mcroberts-baird-overview.html
+
 
 ## Rules
 
