Add remote pairing protocol spec.

--- a/specs/Makefile
+++ b/specs/Makefile
@@ -10,7 +10,8 @@ OUT = \
 	draft-mcroberts-uri-dvb.txt draft-mcroberts-uri-dvb.html \
 	draft-mcroberts-uri-resolver.txt draft-mcroberts-uri-resolver.html \
 	draft-mcroberts-baird-overview.txt draft-mcroberts-baird-overview.html \
-	draft-mcroberts-nowp.txt draft-mcroberts-nowp.html	
+	draft-mcroberts-nowp.txt draft-mcroberts-nowp.html \
+	draft-mcroberts-remote-pairing.txt draft-mcroberts-remote-pairing.html
 
 
 ## Rules
