Correct makefile to use proper xml2rfc invocation

--- a/specs/GNUmakefile
+++ b/specs/GNUmakefile
@@ -22,7 +22,7 @@ clean:
 	rm -f $(OUT)
 
 %.txt: %.xml
-	$(XML2RFC) xml2rfc $< $@
+	$(XML2RFC) $< $@
 
 %.html: %.xml
-	$(XML2RFC) xml2rfc $< $@
+	$(XML2RFC) $< $@
